CMS7-8842: increasing line height to fix text clipping issues

--- a/cms/api/src/main/styling/less/_editor_preview.less
+++ b/cms/api/src/main/styling/less/_editor_preview.less
@@ -100,7 +100,7 @@
       line-height: 1em;
 
       &.non-breaking {
-        line-height: 15px;
+        line-height: 16px;
         .truncate();
       }
     }
